Fix the letter spacing in the logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ body {
 h4 {
     color: white;
     padding-left: 15px;
+    letter-spacing: 4px;
     
 }
 
@@ -298,6 +299,7 @@ footer > a {
         font-size: 130%;
         line-height: 75px;
         margin: 0 0.5rem;
+        letter-spacing: 4px;
     }
 
     /* Main content*/
